added the trie structure and the favicon

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ theme_settings:
   # Meta
   avatar: assets/img/triangle.png
   color_image: /assets/img/lineart.png # In post when you set color
-  # favicon: assets/favicon.ico
+  favicon: assets/favicon.ico
 
   # Header and footer text
   header_text: Change header text in <code>_config.yml</code>
